# PyRx

./: .gitattributes  .gitignore  .pre-commit-config.yaml  BUGS.txt  BUILDENV.txt  CAD-PyRx.md  CADPyRx.md  CHANGE_LOG.md  CONTRIBUTING.md  KNOWN_ISSUES.txt  KOWN_ISSUES.txt  LICENSE.md  LICENSE.txt  MANIFEST.in  My VsCode Settings.txt  MyVsCodeSettings.txt  PYPI_README.md  PyRx.sln  README.md  README.txt  READMEHELP.txt  READMEINSTALL.md  READMEINSTALL.txt  READMEINSTALL_OLD.md  credits.txt  gen_pyi.py  gitclean.txt  in_test_runner.py  llms.txt  pyproject.toml  pyrx_version.h  run_tests.bat  setup.cfg  setup.py
Doc/: PyAp.md  PyAx.md  PyBr.md  PyDb.md  PyEd.md  PyGe.md  PyGi.md  PyGs.md  PyPl.md  PyRx.md  PySm.md  README.MD
Doc/Classes/: PyAp.html  (+24 more)
GitResources/: long_description.md
PyRx/: ArxBrxTest.aps  ArxBrxTest.rc  DbCore.cpp  DbCore.h  DocData.cpp  DocData.h  EdCore.cpp  EdCore.h  GsCore.cpp  GsCore.h  PlCore.cpp  PlCore.h  PyAcAp.cpp  PyAcAp.h  PyAcDb.cpp  PyAcEd.cpp  PyAcEd.h  PyAcEditor.cpp  PyAcEditor.h  PyAcGe.cpp  PyAcGe.h  PyAcGeSurface.cpp  PyAcGeSurface.h  PyAcGi.cpp  PyAcGs.cpp  PyAcGs.h  PyAcPl.cpp  PyAcPl.h  PyAcRx.cpp  PyAcRx.h  PyApApplication.cpp  PyApApplication.h  PyApDocManager.cpp  PyApDocManager.h  PyApDocument.cpp  PyApDocument.h  PyApLayoutManager.cpp  PyApLayoutManager.h  PyBrxCv.cpp  PyBrxCv.h  (+264 more)
PyRxAcSetup/: PyRxAcSetup.vdproj
PyRxAcSetupEB/: PyRxAcSetupEB.vdproj
PyRxCore/: AcDbOverrulableEntity.cpp  AcDbOverrulableEntity.h  DbCore.cpp  DbCore.h  DocData.cpp  DocData.h  EdCore.cpp  EdCore.h  GsCore.cpp  GsCore.h  PerformanceRule.ruleset  PlCore.cpp  PlCore.h  PyAcAp.cpp  PyAcAx.cpp  PyAcAx.h  PyAcAxCommon.h  PyAcBr.cpp  PyAcBr.h  PyAcDb.cpp  PyAcDb.h  PyAcEd.cpp  PyAcEditor.cpp  PyAcEditor.h  PyAcGe.cpp  PyAcGe.h  PyAcGi.cpp  PyAcGi.h  PyAcGs.cpp  PyAcPl.cpp  PyAcRx.cpp  PyAcRx.h  PyAcSm.cpp  PyAcSm.h  PyAcad.h  PyAcadApplication.cpp  PyAcadApplication.h  PyAcadApplicationImpl.cpp  PyAcadApplicationImpl.h  PyAcadDatabase.cpp  (+351 more)
PyRxEbSetup/: PyRxEbSetup.vdproj
PyRxLoader/: Resource.h  Rx25Loader.vcxproj  RxLoader.aps  RxLoader.rc  RxLoader24.0.vcxproj  RxLoader24.1.vcxproj  RxLoader24.2.vcxproj  RxLoader24.3.vcxproj  RxLoader25.0.vcxproj  RxLoader25.1.vcxproj  RxLoader26.0.vcxproj  RxLoaderG24.0.vcxproj  RxLoaderG25.0.vcxproj  RxLoaderG25.0.vcxproj.filters  RxLoaderG26.0.vcxproj  RxLoaderG27.0.vcxproj  RxLoaderI14.0.vcxproj  RxLoaderI14.0.vcxproj.filters  RxLoaderI14.1.vcxproj  RxLoaderV24.0.vcxproj  RxLoaderV25.0.vcxproj  RxLoaderV26.0.vcxproj  RxLoaderV27.0.vcxproj  RxLoaderZ24.0.vcxproj  RxLoaderZ25.0.vcxproj  RxLoaderZ26.0.vcxproj  RxLoaderZ27.0.vcxproj  StdAfx.h  acrxEntryPoint.cpp
PyRxSetup/: CustomAction_Impersonate.js  PyRxSetup.vdproj
PyRxStubs/: AcadApp24.py  AcadApp24.pyi  AcadAppUtils24.py  AcadComTypes.py  AcadComTypes24.py  AxApp24.py  AxApp24.pyi  AxApp25.py  AxAppUtils24.py  BxApp24.py  BxApp24.pyi  BxApp25.py  BxDb24.py  BxDb24.pyi  ComAcadApplication24.py  ComAcadApplication24.pyi  ComAcadDBX24.py  ComETransmit20.py  ComSmcomponents24.py  GxApp24.py  GxApp24.pyi  GxApp25.py  GxApp25.pyi  PyAp.html  PyAp.pyi  PyBr.pyi  PyBrx.pyi  PyBrxBim.pyi  PyBrxCv.pyi  PyDb.pyi  PyEd.html  PyEd.pyi  PyGe.html  PyGe.pyi  PyGi.html  PyGi.pyi  PyGs.pyi  PyPl.pyi  PyRx.html  PyRx.pyi  (+16 more)
PySamples/: 24-05-2023_21-21-32_v23-2-05-0.dmp  EntityHyperlinkPE.py  PyAp.pyi  PyGi.pyi  _perfTest.py  autoComplete.py  batchSample.py  curves.py  genDoc.py  helloworld.py  insertblock.py  pickleTest.py  pointMonitor.py  pyautocadtest.py  pyrx_onload.py  sub-interpreter.py  template.py  testAcGe.py  testAcedInvoke.py  testAnno.py  testAttToExcel.py  testBlockToImage.py  testCmdFlags.py  testDatabaseReactor.py  testDbDimAssoc.py  testDbObjectReactor.py  testDbObjectSnoop.py  testDbTable.py  testDbTransaction.py  testDeepCloneObjects.py  testDumpDwgToFile.py  testEntityReactor.py  testGetVar.py  testLayerFilter.py  testLayoutManager.py  testMtextFragsToLisp.py  testPlot.py  testPlotwindow.py  testPointHash.py  testPyApplication.py  (+35 more)
RxInstall/: EntryPoint.cpp  Registry.hpp  RxEnvironment.cpp  RxEnvironment.h  RxInstall.vcxproj  RxInstall.vcxproj.filters  framework.h  pch.h
RxUninstall/: RxUninstall.vcxproj
Templates/: __init__.tpl  pyrx_version.tpl
VSCodeSettings/: Dan's Settings.txt  README.md
Version/: PackageContents.tpl  Version.vcxproj  __init__.tpl  pyrx_version.tpl  version.py
pyrx/: AxApp24.py  AxApp25.py  AxApp25.pyi  BxApp24.py  BxApp24.pyi  BxApp25.py  BxApp25.pyi  GxApp24.py  GxApp25.py  GxApp25.pyi  PyAp.pyi  PyAx.pyi  PyBr.pyi  PyBrx.pyi  PyBrxBim.pyi  PyBrxCv.pyi  PyDb.pyi  PyEd.pyi  PyGe.pyi  PyGi.pyi  PyGs.pyi  PyPl.pyi  PyRx.pyi  PyRxDebug.py  PySm.pyi  RxLoader24.0.arx  RxLoader24.1.arx  RxLoader24.2.arx  RxLoader24.3.arx  RxLoader25.0.arx  RxLoader25.1.arx  RxLoader26.0.arx  RxLoaderG24.0.grx  RxLoaderG25.0.grx  RxLoaderG26.0.grx  RxLoaderG27.0.grx  RxLoaderI14.0.irx  RxLoaderI14.1.irx  RxLoaderV24.0.brx  RxLoaderV25.0.brx  (+20 more)
tests/: README.md  __init__.py  _utils.py  config.py  conftest.py  host_runner.py  pytest.ini  runner.py  test_config.py  test_console.py  test_demo.py  test_host_init.py
unit tests/: UnitTestAll.py  UnitTestPyAcGe.py  UnitTestPyActiveX.py  UnitTestPyBcadCivil.py  UnitTestPyDatabase.py  UnitTestPyDbEntity.py  UnitTestPyDbEval.py  UnitTestPyDbObject.py  UnitTestPyDbObjectId.py  UnitTestPyDbPoint.py  UnitTestPyEditor.py  UnitTestPyRxObject.py  UnitTestPyWx.py  UnitTestRunner.py  dbc.py  testLisp.lsp
unitTests/: TestResultsChecker.py  UnitTestDocString.py  UnitTestMisc.py  UnitTestPyAcGe.py  UnitTestPyActiveX.py  UnitTestPyBcadBim.py  UnitTestPyBcadCivil.py  UnitTestPyBrep.py  UnitTestPyDatabase.py  UnitTestPyDbAssocPersSubentIdPE.py  UnitTestPyDbEntity.py  UnitTestPyDbEval.py  UnitTestPyDbObject.py  UnitTestPyDbObjectId.py  UnitTestPyEditor.py  UnitTestPyRxObject.py  UnitTestPyWx.py  UnitTestResbuf.py  UnitTestRunner.py  UnitTestSheetSet.py  dbc.py  testLisp.lsp  testcfg.py
(+493 files in other folders)
