[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pyrx*"]
namespaces = false

[tool.setuptools.dynamic]
version = { attr = "pyrx.__version__" }

[project]
name = "pyrx"
dynamic = ["version"]
authors = [{ name = "PyRx Dev Team", email = "daniel@cadext.com" }]
description = "Python wrappers for Autocad ObjectARX® and clones."
readme = "README.md"
requires-python = ">=3.12.0,<3.13.0"
keywords = ["dwg", "dxf", "autocad", "bricscad", "gstarcad", "zwcad"]
license = { file = "LICENSE.txt" }
# full list of classifiers: https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["wxpython>=4.2.2"]

[project.optional-dependencies]
activex = ["pywin32"]
dev = ["black", "isort", "mypy", "pytest", "debugpy>=1.8.0", "build"]

[project.urls]
Homepage = "https://pyarx.blogspot.com/"
Repository = "https://github.com/CEXT-Dan/PyRx"
Issues = "https://github.com/CEXT-Dan/PyRx/issues"
