[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pyrx*"]
namespaces = false

[tool.setuptools.dynamic]
version = { attr = "pyrx.__version__" }

[project]
name = "cad-pyrx"
dynamic = ["version"]
authors = [{ name = "PyRx Dev Team", email = "daniel@cadext.com" }]
description = "Python for Autocad® and Clones."
readme = "PYPI_README.md"
requires-python = ">=3.12.0,<3.13.0"
keywords = [
    "AutoCAD",
    "BricsCAD",
    "GStarCAD",
    "ZwCAD",
    "CAD",
    "dwg",
    "dxf",
    "Python",
    "Wrappers",
    "ARX",
    "BRX",
    "GRX",
    "ZRX",
]
license = { file = "LICENSE.txt" }
# full list of classifiers: https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "wxpython>=4.2.3; os_name == 'nt'", # Hard to install on Ubuntu for the CI
    "pywin32; os_name == 'nt'",
    "debugpy>=1.8.0",
    "pydantic_settings",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "build",
    "ruff",
    "python-dotenv[cli]",
    "pre-commit",
    "mypy",
    "types-pywin32",
    "asttokens",
    "setuptools-scm>=8",
]
ptrepl = ["ptpython", "prompt_toolkit"]

[project.urls]
Homepage = "https://pyarx.blogspot.com/"
Repository = "https://github.com/CEXT-Dan/PyRx"
Issues = "https://github.com/CEXT-Dan/PyRx/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 99
target-version = "py312"
extend-exclude = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["pyrx"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.mypy]
follow_imports = "skip"
check_untyped_defs = true
files = [
    "pyrx/*/**/*.py",
    "pyrx/_host_init.py",
    "pyrx/commands.py",
    "pyrx/console.py",
    "pyrx/PyAp.pyi",
    "pyrx/PyAx.pyi",
    "pyrx/PyBr.pyi",
    "pyrx/PyBrx.pyi",
    #    "pyrx/PyBrxBim.pyi",  # Needs extra work
    #    "pyrx/PyBrxCv.pyi",  # Needs extra work
    #    "pyrx/PyDb.pyi",  # Needs extra work
    #    "pyrx/PyEd.pyi",  # Needs extra work
    #    "pyrx/PyGe.pyi",  # Needs extra work
    "pyrx/PyGi.pyi",
    "pyrx/PyGs.pyi",
    "pyrx/PyPl.pyi",
    "pyrx/PyRx.pyi",
    "pyrx/PyRxDebug.py",
    "pyrx/PySm.pyi",
    #    "PySamples",  # Needs extra work
    #    "tests",
    "gen_pyi.py",
    "in_test_runner.py",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["wx.*", "debugpy.*"]
ignore_missing_imports = true
